--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-I created this in April 2020.
+I created this in April 2020.  It has been down due to a filtering error, but back up now!
 
 https://humanrickshaw.shinyapps.io/US_Coronavirus_Visualization
